--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,13 +32,13 @@ jobs:
       - run:
           name: Install and configure ghpages dependencies
           command: |
-              yarn add gh-pages -D
-              git config user.email "samuel.santiago@ufu.br"
-              git config user.name "samuk-a"
+            yarn add gh-pages -D
+            git config user.email "samuel.santiago@ufu.br"
+            git config user.name "samuk-a"
 
       - add_ssh_keys:
           fingerprints:
-            - "0e:49:43:23:6c:37:61:48:97:f7:a1:76:e3:92:91:00"
+            - '0e:49:43:23:6c:37:61:48:97:f7:a1:76:e3:92:91:00'
 
       - run:
           name: Deploy to GitHub Pages
@@ -46,7 +46,7 @@ jobs:
 
 workflows:
   version: 2
-  ci:
+  build_and_deploy:
     jobs:
       - build:
           filters:
