--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate --fail-on-page-error"
   },
   "devDependencies": {
-    "nuxt": "^3.2.2"
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "nuxt": "^3.2.2",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5"
   }
 }
