--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "nuxt": "^3.2.2",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@mdi/font": "^7.1.96",
+    "sass": "^1.58.3",
+    "vuetify": "^3.1.4"
   }
 }
