--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-nuxt": "^4.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "nuxt": "^3.2.2",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
@@ -27,5 +29,15 @@
     "@mdi/font": "^7.1.96",
     "sass": "^1.58.3",
     "vuetify": "^3.1.4"
+  },
+  "lint-staged": {
+    "*.js": "yarn lint",
+    "*.ts": "yarn lint",
+    "*.vue": "yarn lint"
+  },
+  "husky": {
+   "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
