--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,54 +1,41 @@
-version: 2
-
+version: 2.1
+orbs:
+  heroku: circleci/heroku@2.0.0
 jobs:
-  build:
-    working_directory: ~/repo
+  run-test-suite:
     docker:
-      - image: cimg/node:lts
+      - image: circleci/node:18.14.1
+    working_directory: ~/project
     steps:
       - checkout
-
-      - restore_cache:
-          keys:
-            - yarn-v1-{{ checksum "yarn.lock" }}
-
       - run:
-          name: Install dependencies
-          command: yarn --frozen-lockfile --cache-folder ~/.cache/yarn
-
-      - save_cache:
-          key: yarn-v1-{{ checksum "yarn.lock" }}
-          paths:
-            - ~/.cache/yarn
-
+        name: Fetch Dependencies
+        command: yarn install --no-progress --non-interactive --silent --pure-lockfile
       - run:
-          name: Run linter
-          command: yarn lint
+        name: Run test suite
+        command: yarn test_ci
+      - persist_to_workspace:
+        root: ~/project
+        paths:
+          - .
 
-      - run:
-          name: Build project
-          command: yarn generate:gh-pages
-
-      - run:
-          name: Install and configure ghpages dependencies
-          command: |
-            yarn add gh-pages -D
-            git config user.email "samuel.santiago@ufu.br"
-            git config user.name "samuk-a"
-      - add_ssh_keys:
-          fingerprints:
-            - '6f:2c:fe:95:bf:22:21:98:fd:eb:70:c5:ec:a3:a3:5b'
-
-      - run:
-          name: Deploy to GitHub Pages
-          command: './node_modules/.bin/gh-pages --dotfiles --message "[skip ci] Updates" -d dist'
+  deploy-to-heroku:
+    docker:
+      - image: circleci/node:18.14.1
+    working_directory: ~/project
+    steps:
+      - attach_workspace:
+        at: ~/project
+      - heroku/deploy-via-git:
+        force: true
 
 workflows:
-  version: 2
-  build_and_deploy:
+  test-and-deploy:
     jobs:
-      - build:
-          filters:
-            branches:
-              only:
-                - master
+      - test
+      - deploy-to-heroku
+        requires:
+          - test
+        filters:
+          branches:
+            only: master
