fix(config.yml): change name test job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ workflows:
       - test
       - deploy:
           requires:
-            - run-test-suite
+            - test
           filters:
             branches:
               only: master
