--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
 workflows:
   test-build-and-deploy:
     jobs:
-      - test
+      - test:
           filters:
             branches:
               only: master
