--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,10 @@ jobs:
       - run:
           name: Update yarn
           command: sudo npm install -g yarn@latest --force
+      - node/install-packages:
+          pkg-manager: yarn
+          cache-path: ~/project/node_modules
+          override-ci-command: yarn install --no-progress --non-interactive --silent --pure-lockfile
       - run:
           name: Build output
           command: yarn generate
