--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
             sudo apt update
             sudo apt -qq install git-ftp
             git init
+            git ftp init
             git config user.name "${gitUser}"
             git config user.email "${gitEmail}"
             git add .output/public
