--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
             git config user.email "${gitEmail}"
             git add .output/public
             git commit -m "Deploying public folder"
-            git ftp push --user "${username}" --passwd "${password}" ${ftp_location}
+            git ftp push --force --syncroot .output/public/ --user "${username}" --passwd "${password}" ${ftp_location}
 
 workflows:
   build-deploy:
